# aegis

./: .cursorrules  .gitignore  pyproject.toml
app/core/action_bus/: action_bus.py
app/core/capabilities/: capability_bootstrap.py  capability_handler.py  capability_input.py  capability_registry.py
app/core/capabilities/builtins/: system_capabilities.py
app/core/composition/: composition_root.py
app/core/config/: msc_config_loader.py
app/core/logging/: __init__.py  core_logger.py  log_entry.py  log_level.py  logger.py  logger_config.py
app/core/runtime/: core_runtime.py  runtime_bootstrap.py  runtime_runner.py
app/modules/trading_legacy/: bootstrap.py  main.py
app/modules/trading_legacy/event_bus/: event_bus.py
app/modules/trading_legacy/infrastructure/config/: settings.py
app/modules/trading_legacy/orchestration/: orchestrator.py
app/modules/trading_legacy/trading/: market_scanner.py  pair_universe.py  strategy_registry.py
app/modules/trading_legacy/trading/data/: trades.db  (+1 more)
app/modules/trading_legacy/trading_core_legacy/: event.py  event_factory.py  event_types.py
config/core/: msc_runtime.yaml
config/profiles/: laptop.runtime.yaml
config/trading_legacy/: app.yaml  trading.yaml
data/: trades.db
docs/governance/: active_scope.md  msc_ledger.md  review_prompt.md
mcgiver_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_action_bus_test.py  run_runtime_test.py  test_action_bus_v1.py  test_capability_registry.py  test_system_ping_capability.py
tests/: test_core_runtime.py  test_event_bus.py  test_msc_config_loader.py
(+61 files in other folders)
