[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcgiver-ai"
version = "0.1.0"
description = "Mcgiver AI Assistant"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "apscheduler",
    "loguru"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "data*", "config*", "scripts*"]